added client new request

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -56,7 +56,9 @@
                         HEALING AND SUPPORT PATCHES
                     </h3>
                     <p class="hero__parag"  data-aos="fade-up"    data-aos-offset="50" data-aos-delay="20" data-aos-duration="2500">
-                        Programmed with specific energetic information and frequencies, utilizing the latest technology for a safe, non-drug, non-chemical, and natural approach.
+                    Wearable patches that deliver sustained and
+                    steady results. Restore your life utilizing the
+                    latest technology for a safe, non-drug, nonchemical, and natural approach.
                     </p>
                     <div class="hero__imgcontainer flex">
                         <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/All_Natural-01.png?v=1637108537" alt="all natural" data-aos="fade-down" data-aos-duration="1000">
@@ -141,6 +143,11 @@
                         the 1920's by folks like Albert Einstein and even Nikola
                         Tesla, and used today's technology and equipment to
                         develop Restore Patches.
+                        <br/>
+                        <br/>
+                        We are following that same natural principle by
+                        applying information through the patch and let your
+                        body do what it does naturally
                     </p>
                 </div>
                 <div class="technology__container--right" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
@@ -163,9 +170,17 @@
                         support desired. No drugs. No chemicals. Just a
                         natural approach to the body working in harmony.    
                     </p>
+                    <div class="flex" />
+                        <div class="water-resist">
+                        <img src="https://cdn.shopify.com/s/files/1/0555/5145/9468/files/Group_994.png?v=1638752697" alt="waterproof" width="100%" />
+                        </div>
+                        <div class="hypoallergenic">
+                        <img src="https://cdn.shopify.com/s/files/1/0555/5145/9468/files/Hypoallergenic-01.png?v=1638752697" alt="hypoallergenic" width="100%" />
+                        </div>
+                    </div>
                 </div>
                 <div class="technology__container--right" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
-                    <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/bg2.png?v=1637108537" alt="">
+                    <img src="https://cdn.shopify.com/s/files/1/0555/5145/9468/files/girlpatch.png?v=1638752697" alt="">
                 </div>
             </div>
             <div class="technology__container flex">
@@ -271,9 +286,15 @@
                     <div class="panel">
                         <p>Oh, do they! We are so confident that our patches will help you, the first week is
                             on us! That's right, simply pay for shipping and we will send you a week's worth
-                            on us. NO ONE is that confident in their product and we want you to be
-                            completely satisfied with Restore Patch. NO RISK, NO OBLIGATION... Simply try
+                            on us. <strong>NO ONE<strong/> is that confident in their product and we want you to be
+                            completely satisfied with Restore Patch. <strong>NO RISK, NO OBLIGATION...<strong/> Simply try
                             them on us and see if they work for you!
+                        </p>
+                    </div>
+                    <button class="accordion">Can I swim or bath with them on?</button>
+                    <div class="panel">
+                        <p>Yes, our patches are waterproof. However, we do recommend covering them
+                            with a simple Band-Aid to assure they stay on.
                         </p>
                     </div>
                 </div>
