added missing content

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -73,7 +73,7 @@
         <section class="scienceandtech" id="scienceandtech">
             <div class="scienceandtech__container flex">
                 <div class="scienceandtech__container--left" data-aos="fade-right" >
-                    <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/secondsection.png?v=1637108538" alt="">
+                    <img src="https://cdn.shopify.com/s/files/1/0555/5145/9468/files/boxes.png?v=1638752697" alt="">
                 </div>
                 <div class="scienceandtech__container--right flexcol" data-aos="fade-left">
                     <h2 class="title">
@@ -170,7 +170,7 @@
                         support desired. No drugs. No chemicals. Just a
                         natural approach to the body working in harmony.    
                     </p>
-                    <div class="flex" />
+                    <div class="flex waterhypocontainer">
                         <div class="water-resist">
                         <img src="https://cdn.shopify.com/s/files/1/0555/5145/9468/files/Group_994.png?v=1638752697" alt="waterproof" width="100%" />
                         </div>
