remove strong element

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -286,8 +286,8 @@
                     <div class="panel">
                         <p>Oh, do they! We are so confident that our patches will help you, the first week is
                             on us! That's right, simply pay for shipping and we will send you a week's worth
-                            on us. <strong>NO ONE<strong/> is that confident in their product and we want you to be
-                            completely satisfied with Restore Patch. <strong>NO RISK, NO OBLIGATION...<strong/> Simply try
+                            on us. <b>NO ONE</b> is that confident in their product and we want you to be
+                            completely satisfied with Restore Patch. <b>NO RISK, NO OBLIGATION...</b> Simply try
                             them on us and see if they work for you!
                         </p>
                     </div>
