fixed minor issue on technology section

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -138,16 +138,17 @@
                         It's Actually Pretty Simple
                     </h3>
                     <p>
-                        Our team of scientists and engineers took basic
-                        physics and biology principles that were discovered in
-                        the 1920's by folks like Albert Einstein and even Nikola
-                        Tesla, and used today's technology and equipment to
-                        develop Restore Patches.
+                        Electroceuticals has been used for decades and the
+                        idea of capturing the profiles of remedies and
+                        compounds is nothing new. Our own bodies do this
+                        exact same thing. When you are injured, your cells
+                        push ions through their membrane to the location of
+                        the wound to help recovery.
                         <br/>
                         <br/>
                         We are following that same natural principle by
                         applying information through the patch and let your
-                        body do what it does naturally
+                        body do what it does naturally.
                     </p>
                 </div>
                 <div class="technology__container--right" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
