--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -80,7 +80,7 @@
                         Science and Technology Working with Harmony
                     </h2>
                     <p class="subtitle">
-                        A natural process to use the body's own electronic field to attract programmed patches with specific energetic information and frequencies that the body can detect and respond to at the molecular level.
+                        A natural process to use the body's own electrical field to attract programmed patches with specific energetic information and frequencies that the body can detect and respond to at the molecular level.
                     </p>
                 </div>
             </div>
@@ -164,10 +164,10 @@
                     <p>
                         Like a compact disc or record, Restore Patches are
                         programmed with information. Science tells us that
-                        this information, or energy, can be converted into
-                        matter and back again. Since every living thing has
-                        specific, unique electrical fields and frequencies, we
-                        can program each patch for the specific healing or
+                        this information, or energy, can be captured and 
+                        converted into matterand back again. Since every living 
+                        thing has specific, unique electrical fields and frequencies, 
+                        we can program each patch for the specific healing or
                         support desired. No drugs. No chemicals. Just a
                         natural approach to the body working in harmony.    
                     </p>
@@ -267,9 +267,7 @@
                          Migraines, & Tinnitus, as well as support with Energy, Focus, and Concentration. Once 
                          applied to the skin in the designated area, our body's own electric field activates the 
                          patch and begins sending the information to our bodies. Patches last 1-3 days depending 
-                         on specific patch (see specific patch for more details). Based on instructions, simply 
-                         attach a patch and let it work. Patches can then be removed, thrown away, and a new one 
-                         applied. 
+                         on specific patch (see specific patch for more details). Simple apply the patch as directed.
                         </p>
                     </div>
                     <button class="accordion">How many Patches come in a box?</button>
@@ -285,8 +283,8 @@
                     </div>
                     <button class="accordion">Do they really work and is there a guarantee?</button>
                     <div class="panel">
-                        <p>Oh, do they! We are so confident that our patches will help you, the first week is
-                            on us! That's right, simply pay for shipping and we will send you a week's worth
+                        <p>They sure do! We are so confident that our patches will help you, the first week is
+                            on us! That's right, simply click the "Get Free Patch" button and we will send you a week's worth
                             on us. <strong>NO ONE</strong> is that confident in their product and we want you to be
                             completely satisfied with Restore Patch. <strong>NO RISK, NO OBLIGATION...</strong> Simply try
                             them on us and see if they work for you!
