--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -77,6 +77,7 @@
         // Get the button that opens the modal
         var btn = document.getElementById("myBtn");
         var btn2 = document.getElementById("myBtn2");
+        var bod = document.getElementsByTagName("BODY")[0];
 
         // Get the <span> element that closes the modal
         var span = document.getElementsByClassName("close")[0];
@@ -89,9 +90,6 @@
             modal.style.display = "block";
             document.getElementById("menu-toggle1").checked = false;
         }
-  
-
-
         // When the user clicks on <span> (x), close the modal
         span.onclick = function () {
             modal.style.display = "none";
