--- a/assets/style.css
+++ b/assets/style.css
@@ -1048,7 +1048,7 @@ html {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   right: 0;
