--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -111,13 +111,13 @@
                 <div class="healing--imgcontainer flexcol " data-aos="fade-in" data-aos-duration="1000" data-aos-easing="ease-in-sine">
                     <img src="https://cdn.shopify.com/s/files/1/0555/5145/9468/files/Restore_Patch_MigraineHeadache_Patch.png?v=1638315310" alt="tinnitus">
                     <h3 class="healing--text">
-                        Migraine/<span class="space> </span>Headache Patch
+                        Migraine/Headache Patch
                     </h3>
                 </div>
                 <div class="healing--imgcontainer flexcol" data-aos="fade-in" data-aos-duration="1500" data-aos-easing="ease-in-sine">
                     <img src="https://cdn.shopify.com/s/files/1/0555/5145/9468/files/Restore_Patch_FocusConcentration_Patch.png?v=1638315310" alt="tinnitus">
                     <h3 class="healing--text">
-                        Focus/<span class="space> </span>Concentration Patch
+                        Focus/Concentration Patch
                     </h3>
                 </div>
                 <div class="healing--imgcontainer flexcol" data-aos="fade-in" data-aos-duration="2000" data-aos-easing="ease-in-sine">
