add space on mobile healing-text

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -113,11 +113,17 @@
                     <h3 class="healing--text">
                         Migraine/Headache Patch
                     </h3>
+                    <h3 class="healing--mobile">
+                        Migraine/ Headache Patch
+                    </h3>
                 </div>
                 <div class="healing--imgcontainer flexcol" data-aos="fade-in" data-aos-duration="1500" data-aos-easing="ease-in-sine">
                     <img src="https://cdn.shopify.com/s/files/1/0555/5145/9468/files/Restore_Patch_FocusConcentration_Patch.png?v=1638315310" alt="tinnitus">
                     <h3 class="healing--text">
                         Focus/Concentration Patch
+                    </h3>
+                    <h3 class="healing--mobile">
+                        Focus/ Concentration Patch
                     </h3>
                 </div>
                 <div class="healing--imgcontainer flexcol" data-aos="fade-in" data-aos-duration="2000" data-aos-easing="ease-in-sine">
