--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -27,8 +27,8 @@
 <body>
   {{ content_for_layout }}
 {% section 'footer' %}
-    {{ 'jquery-migrate.js' | global_asset_url | script_tag }} 
-    {{ 'jquery-migrate.min.js' | global_asset_url | script_tag }} 
+    <script type="text/javascript" src="https://cdn.shopify.com/s/files/1/0555/5145/9468/files/jquery-migrate.js?v=1638835855"></script>
+    <script type="text/javascript" src="https://cdn.shopify.com/s/files/1/0555/5145/9468/files/jquery-migrate.min.js?v=1638835855"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
       <script>
         $(document).ready(function(){
