--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -27,7 +27,7 @@
 <body>
   {{ content_for_layout }}
 {% section 'footer' %}
-    <script type="text/javascript" src="https://cdn.shopify.com/s/files/1/0555/5145/9468/files/jquery-1.11.0.min.js?v=1638836487"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.shopify.com/s/files/1/0555/5145/9468/files/jquery-migrate-1.2.1.min.js?v=1638836487"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
       <script>
