added new contents

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -73,7 +73,7 @@
         <section class="scienceandtech" id="scienceandtech">
             <div class="scienceandtech__container flex">
                 <div class="scienceandtech__container--left" data-aos="fade-right" >
-                    <img src="https://cdn.shopify.com/s/files/1/0555/5145/9468/files/boxes.png?v=1638752697" alt="">
+                    <img src="https://cdn.shopify.com/s/files/1/0555/5145/9468/files/Restore_Patch_Combo_Blue___Baby_Blue.png?v=1638839900" alt="">
                 </div>
                 <div class="scienceandtech__container--right flexcol" data-aos="fade-left">
                     <h2 class="title">
@@ -144,17 +144,14 @@
                         It's Actually Pretty Simple
                     </h3>
                     <p>
+                        Our team of scientists and engineers took basic physics and biology principles that were discovered in the 1920's by folks like Albert Einstein and even Nikola Tesla, and used today's technology and equipment to develop Restore Patches. 
+                        <br/>
+                        <br/>
                         Electroceuticals has been used for decades and the
-                        idea of capturing the profiles of remedies and
-                        compounds is nothing new. Our own bodies do this
-                        exact same thing. When you are injured, your cells
-                        push ions through their membrane to the location of
-                        the wound to help recovery.
+                        idea of capturing the profiles of remedies and compounds is nothing new. Our own bodies do this exact same thing. When we are injured, our cells push ions through their membrane to the location of the wound to help recovery.
                         <br/>
                         <br/>
-                        We are following that same natural principle by
-                        applying information through the patch and let your
-                        body do what it does naturally.
+                        We are following that same natural principle by applying information through the patch and let your body do what it does naturally.
                     </p>
                 </div>
                 <div class="technology__container--right" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
@@ -183,6 +180,9 @@
                         </div>
                         <div class="hypoallergenic">
                         <img src="https://cdn.shopify.com/s/files/1/0555/5145/9468/files/Hypoallergenic-01.png?v=1638752697" alt="hypoallergenic" width="100%" />
+                        </div>
+                        <div class="discrete">
+                        <img src="https://cdn.shopify.com/s/files/1/0555/5145/9468/files/Discrete-Easy-01.png?v=1638839899" alt="hypoallergenic" width="100%" />
                         </div>
                     </div>
                 </div>
@@ -278,12 +278,12 @@
                     </div>
                     <button class="accordion">How many Patches come in a box?</button>
                     <div class="panel">
-                        <p>   Depending on the specific patch, they range from a 10-30 day supply. 
+                        <p>   Depending on the specific patch, they range from a 3-day, 10-day, and 30-day supply. 
                         </p>
                     </div>
-                    <button class="accordion">Do you have a subscription?</button>
+                    <button class="accordion">Do you have a subscription option?</button>
                     <div class="panel">
-                        <p>   Yes! We've taken the hassle of having to order each month and provided a 
+                        <p>Yes! It's called our PATCH CLUB. We've taken the hassle of having to order each month and provided a 
                         HUGE savings for those in our "Subscription Club". Click here for details.
                         </p>
                     </div>
@@ -292,14 +292,14 @@
                         <p>They sure do! We are so confident that our patches will help you, the first week is
                             on us! That's right, simply click the "Get Free Patch" button and we will send you a week's worth
                             on us. <strong>NO ONE</strong> is that confident in their product and we want you to be
-                            completely satisfied with Restore Patch. <strong>NO RISK, NO OBLIGATION...</strong> Simply try
+                            completely satisfied. <strong>NO RISK, NO OBLIGATION...</strong> Simply try
                             them on us and see if they work for you!
                         </p>
                     </div>
                     <button class="accordion">Can I swim or bath with them on?</button>
                     <div class="panel">
                         <p>Yes, our patches are waterproof. However, we do recommend covering them
-                            with a simple Band-Aid to assure they stay on.
+                            with a simple Band-Aid to assure they stay on under long exposure to water.
                         </p>
                     </div>
                 </div>
