--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -58,7 +58,7 @@
                     <p class="hero__parag"  data-aos="fade-up"    data-aos-offset="50" data-aos-delay="20" data-aos-duration="2500">
                     Wearable patches that deliver sustained and
                     steady results. Restore your life utilizing the
-                    latest technology for a safe, non-drug, nonchemical, and natural approach.
+                    latest technology for a safe, non-drug, non-chemical, and natural approach.
                     </p>
                     <div class="hero__imgcontainer flex">
                         <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/All_Natural-01.png?v=1637108537" alt="all natural" data-aos="fade-down" data-aos-duration="1000">
@@ -273,7 +273,7 @@
                          Migraines, & Tinnitus, as well as support with Energy, Focus, and Concentration. Once 
                          applied to the skin in the designated area, our body's own electric field activates the 
                          patch and begins sending the information to our bodies. Patches last 1-3 days depending 
-                         on specific patch (see specific patch for more details). Simple apply the patch as directed.
+                         on specific patch (see specific patch for more details). Simply apply the patch as directed.
                         </p>
                     </div>
                     <button class="accordion">How many Patches come in a box?</button>
