change title in scientandtech section

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -77,7 +77,7 @@
                 </div>
                 <div class="scienceandtech__container--right flexcol" data-aos="fade-left">
                     <h2 class="title">
-                        Science and Technology Working with Harmony
+                        Science and Technology Working in Harmony
                     </h2>
                     <p class="subtitle">
                         A natural process to use the body's own electrical field to attract programmed patches with specific energetic information and frequencies that the body can detect and respond to at the molecular level.
