remove overflow when click on x button

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -95,6 +95,8 @@
         // When the user clicks on <span> (x), close the modal
         span.onclick = function () {
             modal.style.display = "none";
+            bod.style.overflow="scroll";
+
         }
 
         // When the user clicks anywhere outside of the modal, close it
