--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -95,7 +95,7 @@
         // When the user clicks on <span> (x), close the modal
         span.onclick = function () {
             modal.style.display = "none";
-            bod.style.overflow="scroll";
+            bod.style.overflow="unset";
 
         }
 
@@ -103,7 +103,7 @@
         window.onclick = function (event) {
             if (event.target == modal) {
                 modal.style.display = "none";
-                bod.style.overflow="scroll";
+                bod.style.overflow="unset";
             }
         }
       </script>
