capetal y in select your patch option

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -28,7 +28,7 @@
                         <input type="text" name="address" id="address" placeholder="Address:" class="form-input">
                         <input type="email" name="email" id="email" placeholder="Email:" class="form-input">
                         <select name="selectpatch" id="selectpatch" class="form-input">
-                            <option value="">Select your Patch</option>
+                            <option value="">Select Your Patch</option>
                             <option value="">Tinnitus Relief Patch</option>
                             <option value="">Anxiety Relief Patch</option>
                             <option value="">Sleep Patch</option>
