added new faq from client

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -277,6 +277,14 @@
                          on specific patch (see specific patch for more details). Simply apply the patch as directed.
                         </p>
                     </div>
+                    <button class="accordion">How long does it take to work?</button>
+                    <div class="panel">
+                        <p>You should start to  see results with our Sleep, Migraine/Headache, 
+                        Energy and Focus patches within 30-90 mins. Depending on the severity  
+                        of  the individual, Anxiety and Tinnitus patches can take anywhere from 
+                        1 day to several weeks to begin to show results.
+                        </p>
+                    </div>
                     <button class="accordion">How many Patches come in a box?</button>
                     <div class="panel">
                         <p>   Depending on the specific patch, they range from a 3-day, 10-day, and 30-day supply. 
