change link jquery to local

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -27,8 +27,8 @@
 <body id="bod">
   {{ content_for_layout }}
 {% section 'footer' %}
-  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="https://cdn.shopify.com/s/files/1/0555/5145/9468/files/jquery-1.11.0.min.js?v=1639092940"></script>
+  <script type="text/javascript" src="https://cdn.shopify.com/s/files/1/0555/5145/9468/files/jquery-migrate-1.2.1.min.js?v=1639092940"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
       <script>
         $(document).ready(function(){
