--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -74,11 +74,14 @@
 
         // Get the modal
         var modal = document.getElementById("myModal");
+        var tablet = window.matchMedia("(max-width: 700px)");
+
 
         // Get the button that opens the modal
         var btn = document.getElementById("myBtn");
         var btn2 = document.getElementById("myBtn2");
         var bod = document.getElementById("bod");
+        const modcontent = document.getElementsByClassName("modal-content);
 
         // Get the <span> element that closes the modal
         var span = document.getElementsByClassName("close")[0];
@@ -106,6 +109,16 @@
                 bod.style.overflow="unset";
             }
         }
+
+        const modalResponse = (tablet) => {
+          if(tablet.matches) {
+            modcontent.style.position="absolute";
+            modcontent.style.top="1%";
+          }
+        }
+        
+        modalResponse(tablet);
+        tablet.addEventListener(modalResponse);
       </script>
 </body>
 </html>
