change from class to id modalcontent

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -81,7 +81,7 @@
         var btn = document.getElementById("myBtn");
         var btn2 = document.getElementById("myBtn2");
         var bod = document.getElementById("bod");
-        var modcontent = document.getElementsByClassName("modal-content);
+        var modcontent = document.getElementsById("modalContent");
 
         // Get the <span> element that closes the modal
         var span = document.getElementsByClassName("close")[0];
