--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -2,7 +2,7 @@
  
     <div id="myModal" class="modal">
         <!-- Modal content -->
-        <div class="modal-content">
+        <div class="modal-content" id="modalContent">
             <span class="close">&times;</span>
             <div class="content-wrapper">
                 <div class="left">
