change eventlisterner to listener

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -118,7 +118,7 @@
         }
         
         modalResponse(tablet);
-        tablet.addEventListener(modalResponse);
+        tablet.addListener(modalResponse);
       </script>
 </body>
 </html>
